--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-Stop rounding, and just allow decimals already lol
-Fix guild based random modifier
+Fix guild based random modifier (?)
+Add the shop
+Rework the 'games'
